implementação de exemplo CRUD
