# microservcarro/server/api/controllers/carros/router.ts
@@ -3,4 +3,8 @@ import controller from './carrocontroller';
 
 export default express
     .Router()
-    .get('/', controller.all);
+    .get('/', controller.all)
+    .get('/:id', controller.getById)
+    .post('/', controller.post)
+    .put('/:id', controller.update)
+    .delete('/:id', controller.delete);
